--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <nav>
             <menu>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="login.html">Login</a></li>
                 <li><a href="play.html">Play</a></li>
                 <li><a href="leaderboard.html">leaderboard</a></li>
             </menu>
@@ -19,11 +18,19 @@
         <hr>
     </header>
     <main>
-        <h2>Welcome</h2>
-        <form>
-            
-        </form>
+        <h1>Welcome</h1>
+        <p>Login to play</p>
+            <form method="get" action="play.html">
+                <label for="username"></label>
+                <input type="text" id="username" placeholder="Username">
+                <label for="Password"></label>
+                <input type="text" id="Password" placeholder="Password">
+                <button type="submit">Login</button>
+            </form>
     </main>
+    <footer>
+        <hr>
+    </footer>
     </body>
     
 </html>
