--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </main>
     <footer>
         <hr>
+            <p>Author <a href="https://github.com/corbe19">Github</a></p>
     </footer>
     </body>
     
