--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,6 +27,11 @@
                 <input type="text" id="Password" placeholder="Password">
                 <button type="submit">Login</button>
             </form>
+        <hr>
+            <p>*Place holder for real-time notifications on the home page*</p>
+            <p>LeesJensen is online</p>
+            <p>noobmaster11 is just set a new record!</p>
+            <p>gojo is on the leaderboard</p>
     </main>
     <footer>
         <hr>
