--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="play.html">Play</a></li>
                 <li><a href="leaderboard.html">leaderboard</a></li>
+                <li><a href="about.html">About</a></li>
             </menu>
         </nav>
         <hr>
@@ -29,9 +30,9 @@
             </form>
         <hr>
             <p>*Place holder for real-time notifications on the home page*</p>
-            <p>LeesJensen is online</p>
-            <p>noobmaster11 is just set a new record!</p>
-            <p>gojo is on the leaderboard</p>
+            <p>LeesJensen is online.</p>
+            <p>noobmaster11 just set a new record!</p>
+            <p>gojo is on the leaderboard.</p>
     </main>
     <footer>
         <hr>
