--- a/HTML/leaderboard.html
+++ b/HTML/leaderboard.html
@@ -13,6 +13,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="play.html">Play</a></li>
                 <li><a href="leaderboard.html">leaderboard</a></li>
+                <li><a href="about.html">About</a></li>
             </menu>
         </nav>
         <hr>
@@ -51,4 +52,9 @@
                 <td>35.00</td>
             </tr>
         </table>
+        <footer>
+            <hr>
+                <p>Author <a href="https://github.com/corbe19">Github</a></p>
+        </footer>
+        </body>
     </main>
