added place holder for game

--- a/HTML/play.html
+++ b/HTML/play.html
@@ -13,7 +13,19 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="play.html">Play</a></li>
                 <li><a href="leaderboard.html">leaderboard</a></li>
+                <li><a href="about.html">About</a></li>
             </menu>
         </nav>
         <hr>
+            <main>
+                <p>
+                    *Insert card memory game here*
+                    I plan to do most of it in javascript so idk what to put here until then :(
+                </p>
+            </main>
+        <footer>
+            <hr>
+                <p>Author <a href="https://github.com/corbe19">Github</a></p>
+        </footer>
+        </body>
     </header>
