--- a/leaderboard.html
+++ b/leaderboard.html
@@ -10,11 +10,11 @@
         <header>
         <h1>Flip</h1>
         <nav>
-            <menu>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="play.html">Play</a></li>
-                <li><a href="leaderboard.html">leaderboard</a></li>
-                <li><a href="about.html">About</a></li>
+            <menu class="topnav">
+                <a href="index.html">Home</a>
+                <a href="play.html">Play</a>
+                <a class="active" href="leaderboard.html">leaderboard</a>
+                <a href="about.html">About</a>
             </menu>
         </nav>
         <hr>
