Implemented new Nav

--- a/about.html
+++ b/about.html
@@ -10,11 +10,11 @@
         <header>
         <h1>Flip</h1>
         <nav>
-            <menu>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="play.html">Play</a></li>
-                <li><a href="leaderboard.html">leaderboard</a></li>
-                <li><a href="about.html">About</a></li>
+            <menu class="topnav">
+                <a href="index.html">Home</a>
+                <a href="play.html">Play</a>
+                <a href="leaderboard.html">leaderboard</a>
+                <a class="active" href="about.html">About</a>
             </menu>
         </nav>
         </header>
@@ -31,7 +31,6 @@
                 </p>
             </main>
         <footer>
-            <hr>
                 <p>Author <a href="https://github.com/corbe19">Github</a></p>
         </footer>
         </body>
