--- a/index.html
+++ b/index.html
@@ -19,11 +19,17 @@
         </nav>
         <hr>
         </header>
-        <p>*Place holder for real-time notifications on the home page*</p>
-        <p>LeesJensen is online.</p>
-        <p>noobmaster11 just set a new record!</p>
-        <p>gojo is on the leaderboard.</p>
-    <main>
+
+        <div class="players">
+            <span class="player-name"></span>
+            <div id="player-messages">
+              <div class="event"><span class="system-event">LeesJensen</span> is online</div>
+              <div class="event"><span class="player-event">noobmaster11</span> just set a new record!</div>
+              <div class="event"><span class="player-event">gojo</span> is on the leaderboard</div>
+            </div>
+          </div>
+
+          <main>
         <h1>Welcome</h1>
         <p>Login to play</p>
             <form method="get" action="play.html">
@@ -33,7 +39,6 @@
                 <input type="text" id="Password" placeholder="Password">
                 <button type="submit">Login</button>
             </form>
-        <hr>
     </main>
     <footer>
             <p>Author <a href="https://github.com/corbe19">Github</a></p>
