--- a/index.html
+++ b/index.html
@@ -20,26 +20,30 @@
         <hr>
         </header>
 
-        <div class="players">
-            <span class="player-name"></span>
-            <div id="player-messages">
-              <div class="event"><span class="system-event">LeesJensen</span> is online</div>
-              <div class="event"><span class="player-event">noobmaster11</span> just set a new record!</div>
-              <div class="event"><span class="player-event">gojo</span> is on the leaderboard</div>
-            </div>
-          </div>
+        
+        <main>
 
-          <main>
-        <h1>Welcome</h1>
-        <p>Login to play</p>
-            <form method="get" action="play.html">
-                <label for="username"></label>
-                <input type="text" id="username" placeholder="Username">
-                <label for="Password"></label>
-                <input type="text" id="Password" placeholder="Password">
-                <button type="submit">Login</button>
-            </form>
-    </main>
+            <div class="playersmain">
+                <span class="player-name"></span>
+                <div id="player-messages">
+                  <div class="event"><span class="system-event">LeesJensen</span> is online</div>
+                  <div class="event"><span class="player-event">noobmaster11</span> just set a new record!</div>
+                  <div class="event"><span class="player-event">gojo</span> is on the leaderboard</div>
+                </div>
+              </div>
+
+             <div class="welcome">
+                <h1>Welcome</h1>
+                <p>Login to play</p>
+                    <form method="get" action="play.html">
+                        <label for="username"></label>
+                        <input type="text" id="username" placeholder="Username">
+                        <label for="Password"></label>
+                        <input type="text" id="Password" placeholder="Password">
+                        <button type="submit">Login</button>
+                    </form>
+            </div>
+        </main>
     <footer>
             <p>Author <a href="https://github.com/corbe19">Github</a></p>
     </footer>
