--- a/play.html
+++ b/play.html
@@ -18,12 +18,17 @@
             </menu>
         </nav>
         </header>
-        <hr>
             <main>
-                <p>
+                <div class="play-header">
+                    <div class="timer">00:32</div>
+                    <div class="name">noobmaster11</div>
+                    <div class="difficulty">Difficulty: Medium</div>
+                </div>
+                
+                <div class="game"> 
                     *Insert card memory game here*
                     I plan to do most of it in javascript so idk what to put here until then :(
-                </p>
+                </div>
             </main>
         <footer>
                 <p>Author <a href="https://github.com/corbe19">Github</a></p>
