--- a/about.html
+++ b/about.html
@@ -18,10 +18,9 @@
             </menu>
         </nav>
         </header>
-        <hr>
             <main>
                 <div id="picture" class="picture-box">
-                    <img width="400px" src="DSC04894.JPG" alt="Sunset">
+                    <img width="400px" src="pexels-sebastian-arie-voortman-189349.jpg" alt="Sunset">
                 </div>
                 <p>
                     Stand in the ashes of a trillion dead souls and ask the ghosts if honor matters. The silence is your answer.
