--- a/index.html
+++ b/index.html
@@ -3,50 +3,68 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="style2.css" />
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+        <script src="script.js" type="text/javascript"></script>
         <title>Flip - Card Memory Game</title>
     </head>
-    <body>
-        <header>
-        <h1>Flip</h1>
-        <nav>
-            <menu class="topnav">
-                <a class="active" href="index.html">Home</a>
-                <a href="play.html">Play</a>
-                <a href="leaderboard.html">leaderboard</a>
-                <a href="about.html">About</a>
-            </menu>
-        </nav>
-        <hr>
-        </header>
 
-        
-        <main>
+    <script>
+       function redirectToPage(targetPage) {
+      window.location.href = targetPage;
+     }
+    </script>
 
-            <div class="playersmain">
-                <span class="player-name"></span>
-                <div id="player-messages">
-                  <div class="event"><span class="system-event">LeesJensen</span> is online</div>
-                  <div class="event"><span class="player-event">noobmaster11</span> just set a new record!</div>
-                  <div class="event"><span class="player-event">gojo</span> is on the leaderboard</div>
-                </div>
-              </div>
 
-             <div class="welcome">
-                <h1>Welcome</h1>
-                <p>Login to play</p>
-                    <form method="get" action="play.html">
-                        <label for="username"></label>
-                        <input type="text" id="username" placeholder="Username">
-                        <label for="Password"></label>
-                        <input type="text" id="Password" placeholder="Password">
-                        <button type="submit">Login</button>
-                    </form>
-            </div>
-        </main>
-    <footer>
-            <p>Author <a href="https://github.com/corbe19">Github</a></p>
-    </footer>
-    </body>
-    
+<div id="g"></div>
+	
+<div class="logo">
+  <p class="info">Click the P to get started.</p>
+  <div class="card left">
+    <div class="flipper">
+      <div class="f c1">F</div>
+      <div class="b contentbox" id="stats">
+        <div class="padded">
+          <h2>Figures</h2>
+          Looks like you haven't FLIPped yet.
+          <a href="javascript:;" class="playnow">Play now</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card active twist"> 
+    <div class="flipper">
+      <div class="b f">
+        <div class="b f c2" onclick="redirectToPage('leaderboard.html')">L</div>
+      </div>
+    </div>
+  </div>
+  <div class="card left">
+    <div class="flipper">
+      <div class="f c3">I</div>
+      <div class="b contentbox instructions">
+        <div class="padded">
+          <h2>Instructions</h2>
+          <p>Press [p] to pause, or [ESC] to abandon game.</p>
+          <p>Flip is a timed card memory game. Click the green cards to see what symbol they uncover and try to find the matching symbol underneath the other cards.</p>
+          <p>Uncover two matching symbols at once to eliminate them from the game.</p>
+          <p>Eliminate all cards as fast as you can to win the game. Have fun FLIPing!</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card">
+    <div class="flipper">
+      <div class="f c4">P</div>
+      <div class="b contentbox levels">
+        <a href="javascript:;" data-level="8" class="play">Casual</a>
+        <a href="javascript:;" data-level="18" class="play">Medium</a>
+        <a href="javascript:;" data-level="32" class="play">Hard</a>
+      </div>
+    </div>
+  </div>
+
+  <p class="info">Author <a href="https://github.com/corbe19">Github</a></p>
+</div>
+
 </html>
