--- a/leaderboard.html
+++ b/leaderboard.html
@@ -3,55 +3,23 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="lb.css" />
         <title>Flip - Card Memory Game</title>
     </head>
     <body>
         <header>
-        <h1>Flip</h1>
-        <nav>
-            <menu class="topnav">
-                <a href="index.html">Home</a>
-                <a href="play.html">Play</a>
-                <a class="active" href="leaderboard.html">leaderboard</a>
-                <a href="about.html">About</a>
-            </menu>
-        </nav>
-        <hr>
+        <h1>Leaderboard</h1>
     </header>
 
     <main>
+
         <table id="players">
             <tr>
                 <td>Rank</td>
                 <td>User</td>
                 <td>Time</td>
               </tr>
-              <tr>
-                <td>1</td>
-                <td>noobmaster11</td>
-                <td>28.00</td>
-              </tr>
-            <tr>
-                <td>2</td>
-                <td>AlwaYSnuMber2</td>
-                <td>29.67</td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>User134</td>
-                <td>30.02</td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>LeesJensen</td>
-                <td>32.78</td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>gojo</td>
-                <td>35.00</td>
-            </tr>
+              <tbody id="scores"></tbody>
         </table>
 
     </main>
