--- a/index.html
+++ b/index.html
@@ -3,68 +3,26 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="style2.css" />
-        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-        <script src="script.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="login.css" />
+        <script src="login.js"></script>
         <title>Flip - Card Memory Game</title>
     </head>
 
-    <script>
-       function redirectToPage(targetPage) {
-      window.location.href = targetPage;
-     }
-    </script>
+    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
 
-
-<div id="g"></div>
-	
-<div class="logo">
-  <p class="info">Click the P to get started.</p>
-  <div class="card left">
-    <div class="flipper">
-      <div class="f c1">F</div>
-      <div class="b contentbox" id="stats">
-        <div class="padded">
-          <h2>Figures</h2>
-          Looks like you haven't FLIPped yet.
-          <a href="javascript:;" class="playnow">Play now</a>
+    <main class="container-fluid  bg-darken-xs  text-center">
+        <div>
+          <h1>Welcome</h1>
+          <p>Login to play</p>
+          <div>
+            <input type="text" id="name" placeholder="Your name here" />
+            <button class="button" onclick="login()">Login</button>
+          </div>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="card active twist"> 
-    <div class="flipper">
-      <div class="b f">
-        <div class="b f c2" onclick="redirectToPage('leaderboard.html')">L</div>
-      </div>
-    </div>
-  </div>
-  <div class="card left">
-    <div class="flipper">
-      <div class="f c3">I</div>
-      <div class="b contentbox instructions">
-        <div class="padded">
-          <h2>Instructions</h2>
-          <p>Press [p] to pause, or [ESC] to abandon game.</p>
-          <p>Flip is a timed card memory game. Click the green cards to see what symbol they uncover and try to find the matching symbol underneath the other cards.</p>
-          <p>Uncover two matching symbols at once to eliminate them from the game.</p>
-          <p>Eliminate all cards as fast as you can to win the game. Have fun FLIPing!</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="card">
-    <div class="flipper">
-      <div class="f c4">P</div>
-      <div class="b contentbox levels">
-        <a href="javascript:;" data-level="8" class="play">Casual</a>
-        <a href="javascript:;" data-level="18" class="play">Medium</a>
-        <a href="javascript:;" data-level="32" class="play">Hard</a>
-      </div>
-    </div>
-  </div>
-
-  <p class="info">Author <a href="https://github.com/corbe19">Github</a></p>
-</div>
-
-</html>
+      </main>
