node js updates

--- a/Public/home.html
+++ b/Public/home.html
@@ -9,25 +9,15 @@
         <title>Flip - Card Memory Game</title>
     </head>
 
-    hea
 
     <script>
        function redirectToPage(targetPage) {
       window.location.href = targetPage;
      }
     </script>
-    
-      <div class="players">
-        <span class="player-name"></span>
-        <div id="player-messages">
-          <div class="event"><span class="player-event">gojo</span> scored 22.34 seconds!</div>
-          <div class="event"><span class="player-event">noobmast11</span> started a new game</div>
-          <div class="event"><span class="system-event">game</span> connected</div>
-        </div>
-      </div>
 
+<p class="info"><a href="about.html">About</a></div></p>
       <div id="g"></div>
-        
       <div class="logo">
         <p class="info">Click the P to get started.</p>
         <div class="card left">
@@ -74,7 +64,7 @@
           </div>
         </div>
 
-        <p class="info">Author <a href="https://github.com/corbe19">Github</a></p>
+        <p class="info">Author<a href="https://github.com/corbe19">Github</a></p>
       </div>
 
 </html>
