added elevator pitch to page

--- a/Public/about.html
+++ b/Public/about.html
@@ -24,9 +24,10 @@
         <span></span>
     </div>
             <main>
-                <div id="picture" class="picture-box">
-                </div>
-
+                <div id="picture" class="picture-box"></div>
+                <p>Have you ever been bored while attending one of your CS classes and said to yourself: "I wish I could play a game that tests my intellect and proves that I have a better memory than all my friends." 
+                    Flip is a card memory game that tests your ability to remember symbols and their locations. Flip also tracks your performance and posts the best scores on a public leaderboard 
+                    in order to compete with your friends and satisfy your competitive itch.</p>
                 <div id="quote"></div>
 
             </main>
