--- a/Public/index.html
+++ b/Public/index.html
@@ -23,7 +23,7 @@
             <input type="text" id="userName" placeholder="your@email.com" />
             <input type="password" id="userPassword" placeholder="password" />
             <button class="button" onclick="loginUser()">Login</button>
-            <div id="errorMessage" style="color: red;"></div>
+            <div id="errorMessage" style="color: orange;"></div>
           <div>
             <p>Don't have an acount?</p>
             <button class="button" onclick="createUser()">Create</button>
