added websocket message elements

--- a/Public/leaderboard.html
+++ b/Public/leaderboard.html
@@ -28,9 +28,9 @@
         <p>*Only times from "Casual" difficulty are shown.*</p>
 
         <div class="players">
+            Player: 
             <span class="player-name"></span>
-            <div id="player-messages">
-            </div>
+            <div id="player-messages"></div>
           </div>
 
         <table id="players">
@@ -44,7 +44,6 @@
               <tbody id="scores"></tbody>
         </table>
         <script src="lb.js" type="text/javascript"></script>
-        <script src="script.js" type="text/javascript"></script>
     </main>
 </body>
 
