Final touches and bug fixes

--- a/Public/home.html
+++ b/Public/home.html
@@ -16,7 +16,7 @@
      }
     </script>
 
-<p class="info"><a href="about.html">About</a></div></p>
+<p class="info"><a href="https://startup.corbegames.click/about">About</a></div></p>
       <div id="g"></div>
       <div class="logo">
         <p class="info">Click the P to get started.</p>
